--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "@react-native-masked-view/masked-view": "^0.3.2",
     "react": ">=0.14.8",
     "react-native": ">=0.50.1",
-    "react-native-linear-gradient": "^2.5.6"
+    "react-native-linear-gradient": "^2.8.3",
   }
 }
